--- a/assignments/assignment_1.ipynb
+++ b/assignments/assignment_1.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -63,71 +63,71 @@
      "output_type": "stream",
      "text": [
       "Vector of expected returns (q):\n",
-      "Asset_1      0.585686\n",
-      "Asset_2      0.289911\n",
-      "Asset_3      0.562792\n",
-      "Asset_4      0.267083\n",
-      "Asset_5      0.234132\n",
+      "Asset_1      0.439781\n",
+      "Asset_2      0.003854\n",
+      "Asset_3      0.557548\n",
+      "Asset_4      0.783066\n",
+      "Asset_5      1.106094\n",
       "               ...   \n",
-      "Asset_96     0.614382\n",
-      "Asset_97     0.393991\n",
-      "Asset_98     0.769293\n",
-      "Asset_99     0.611028\n",
-      "Asset_100    0.373884\n",
+      "Asset_96     0.404006\n",
+      "Asset_97     0.965377\n",
+      "Asset_98     0.908774\n",
+      "Asset_99     0.893983\n",
+      "Asset_100    0.675554\n",
       "Length: 100, dtype: float64\n",
       "\n",
       "Covariance matrix (P):\n",
       "             Asset_1    Asset_2    Asset_3    Asset_4    Asset_5    Asset_6  \\\n",
-      "Asset_1    31.798509  24.828966  23.662610  25.713142  25.702657  26.527809   \n",
-      "Asset_2    24.828966  35.649954  25.004459  28.357161  27.693394  27.788563   \n",
-      "Asset_3    23.662610  25.004459  28.230190  23.935030  23.845259  25.355326   \n",
-      "Asset_4    25.713142  28.357161  23.935030  33.957776  25.772156  28.040510   \n",
-      "Asset_5    25.702657  27.693394  23.845259  25.772156  35.794538  29.065975   \n",
+      "Asset_1    39.935473  29.044137  28.259793  28.210666  31.966498  25.268396   \n",
+      "Asset_2    29.044137  37.301116  27.133329  27.146006  29.262580  26.448117   \n",
+      "Asset_3    28.259793  27.133329  31.835300  25.985145  29.862545  24.311638   \n",
+      "Asset_4    28.210666  27.146006  25.985145  34.438228  31.243505  22.975007   \n",
+      "Asset_5    31.966498  29.262580  29.862545  31.243505  40.212618  25.703519   \n",
       "...              ...        ...        ...        ...        ...        ...   \n",
-      "Asset_96   25.032439  26.960581  24.669273  25.286453  27.098781  28.033079   \n",
-      "Asset_97   25.846834  25.581775  24.009683  25.915902  25.456399  27.243913   \n",
-      "Asset_98   25.751505  25.290374  23.463767  24.794877  24.609001  27.625584   \n",
-      "Asset_99   23.707565  24.997276  22.476418  25.073545  27.542504  25.701971   \n",
-      "Asset_100  23.798140  25.863643  22.028535  24.798842  26.642750  27.336813   \n",
+      "Asset_96   24.296039  22.055025  22.256000  22.204950  25.772871  19.753052   \n",
+      "Asset_97   26.388233  26.401770  23.257242  23.904631  25.705142  24.335317   \n",
+      "Asset_98   29.526739  27.416981  23.482212  25.402053  29.320160  24.010047   \n",
+      "Asset_99   28.986762  26.723594  25.614827  25.817463  28.661038  24.496429   \n",
+      "Asset_100  30.959394  30.742893  26.588187  27.679404  30.117096  26.322499   \n",
       "\n",
       "             Asset_7    Asset_8    Asset_9   Asset_10  ...   Asset_91  \\\n",
-      "Asset_1    22.451932  23.030788  25.157065  24.888600  ...  27.450182   \n",
-      "Asset_2    25.804661  24.408286  25.563606  28.026171  ...  30.013697   \n",
-      "Asset_3    22.247263  22.037824  23.155575  25.163837  ...  25.254345   \n",
-      "Asset_4    24.066374  24.166841  25.673821  28.087775  ...  27.374562   \n",
-      "Asset_5    24.605094  27.184966  26.229834  29.156419  ...  30.136023   \n",
+      "Asset_1    25.343879  24.265920  28.589174  30.345614  ...  26.575289   \n",
+      "Asset_2    26.456163  21.813849  27.333822  26.985804  ...  26.044412   \n",
+      "Asset_3    24.108731  19.737716  24.886522  26.309967  ...  23.053284   \n",
+      "Asset_4    24.563449  20.530373  24.773539  26.012921  ...  23.160255   \n",
+      "Asset_5    29.642819  22.200274  29.455153  29.773534  ...  24.987205   \n",
       "...              ...        ...        ...        ...  ...        ...   \n",
-      "Asset_96   24.958360  25.104988  23.614508  27.321970  ...  29.582720   \n",
-      "Asset_97   25.479159  25.033189  25.848578  25.082477  ...  27.039137   \n",
-      "Asset_98   23.035461  25.185998  24.079060  25.465900  ...  28.235282   \n",
-      "Asset_99   23.422970  23.768306  22.571479  27.187264  ...  27.284146   \n",
-      "Asset_100  24.016125  25.490205  24.591237  25.168876  ...  27.667219   \n",
+      "Asset_96   21.564160  18.511085  20.278361  22.387327  ...  20.068639   \n",
+      "Asset_97   25.137563  21.570679  24.809777  23.615161  ...  23.470303   \n",
+      "Asset_98   24.283639  20.063021  27.594431  23.957988  ...  24.660083   \n",
+      "Asset_99   25.314906  19.371751  24.541004  25.470704  ...  23.742908   \n",
+      "Asset_100  27.141232  22.477538  27.726224  28.147073  ...  26.350620   \n",
       "\n",
       "            Asset_92   Asset_93   Asset_94   Asset_95   Asset_96   Asset_97  \\\n",
-      "Asset_1    22.724318  23.266935  22.639816  27.536734  25.032439  25.846834   \n",
-      "Asset_2    25.799591  23.505997  26.143261  26.538477  26.960581  25.581775   \n",
-      "Asset_3    21.212548  22.276455  22.934749  26.348289  24.669273  24.009683   \n",
-      "Asset_4    24.192174  24.282259  24.109219  28.360268  25.286453  25.915902   \n",
-      "Asset_5    26.150767  25.367212  25.454959  27.858957  27.098781  25.456399   \n",
+      "Asset_1    29.375226  28.664518  25.068567  28.141642  24.296039  26.388233   \n",
+      "Asset_2    26.288526  27.539961  25.501741  27.843657  22.055025  26.401770   \n",
+      "Asset_3    27.237331  24.870176  22.114376  27.117591  22.256000  23.257242   \n",
+      "Asset_4    27.178164  25.794175  23.947608  26.975926  22.204950  23.904631   \n",
+      "Asset_5    30.485020  28.705223  25.614512  30.192633  25.772871  25.705142   \n",
       "...              ...        ...        ...        ...        ...        ...   \n",
-      "Asset_96   25.591816  24.655579  24.626150  27.738594  36.909203  25.660508   \n",
-      "Asset_97   22.001233  24.206813  23.946797  26.741887  25.660508  33.122540   \n",
-      "Asset_98   23.591314  25.068191  23.666375  26.241087  25.879062  24.023446   \n",
-      "Asset_99   25.012250  23.324901  24.722591  27.326022  24.939260  23.536313   \n",
-      "Asset_100  23.924915  24.614905  23.063713  26.557706  24.845289  24.160696   \n",
+      "Asset_96   21.582004  21.521797  19.093679  23.180837  26.408043  20.931214   \n",
+      "Asset_97   24.035253  23.441473  24.360816  24.602940  20.931214  32.725450   \n",
+      "Asset_98   26.389459  24.455979  23.101276  25.896920  19.964862  24.129065   \n",
+      "Asset_99   24.925356  25.883899  22.893210  26.222056  22.423260  24.775623   \n",
+      "Asset_100  27.720055  29.397430  27.312517  28.585832  23.396357  26.758970   \n",
       "\n",
       "            Asset_98   Asset_99  Asset_100  \n",
-      "Asset_1    25.751505  23.707565  23.798140  \n",
-      "Asset_2    25.290374  24.997276  25.863643  \n",
-      "Asset_3    23.463767  22.476418  22.028535  \n",
-      "Asset_4    24.794877  25.073545  24.798842  \n",
-      "Asset_5    24.609001  27.542504  26.642750  \n",
+      "Asset_1    29.526739  28.986762  30.959394  \n",
+      "Asset_2    27.416981  26.723594  30.742893  \n",
+      "Asset_3    23.482212  25.614827  26.588187  \n",
+      "Asset_4    25.402053  25.817463  27.679404  \n",
+      "Asset_5    29.320160  28.661038  30.117096  \n",
       "...              ...        ...        ...  \n",
-      "Asset_96   25.879062  24.939260  24.845289  \n",
-      "Asset_97   24.023446  23.536313  24.160696  \n",
-      "Asset_98   31.857823  23.619728  23.714653  \n",
-      "Asset_99   23.619728  32.069621  24.101358  \n",
-      "Asset_100  23.714653  24.101358  31.642184  \n",
+      "Asset_96   19.964862  22.423260  23.396357  \n",
+      "Asset_97   24.129065  24.775623  26.758970  \n",
+      "Asset_98   34.401505  24.860313  28.780541  \n",
+      "Asset_99   24.860313  32.741131  27.008538  \n",
+      "Asset_100  28.780541  27.008538  38.429146  \n",
       "\n",
       "[100 rows x 100 columns]\n"
      ]
@@ -164,10 +164,10 @@
     "\n",
     "# Display the results\n",
     "print(\"Vector of expected returns (q):\")\n",
-    "print(q)\n",
+    "print(expected_return.vector)\n",
     "# \n",
     "print(\"\\nCovariance matrix (P):\")\n",
-    "print(P)"
+    "print(covariance.matrix)"
    ]
   },
   {
@@ -186,7 +186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -231,16 +231,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['highs', 'daqp', 'cvxopt', 'qpalm', 'quadprog', 'osqp']"
+       "['quadprog', 'highs', 'cvxopt', 'qpalm', 'osqp', 'daqp']"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -251,7 +251,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -300,36 +300,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "                                  highs                   daqp  \\\n",
-      "solution_found                     True                   True   \n",
-      "objective                      9.152325               9.152325   \n",
-      "primal_residual                     0.0                    0.0   \n",
-      "dual_residual                       0.0                    0.0   \n",
-      "duality_gap      1.2604335353216811e-08  8.846257060213247e-13   \n",
-      "runtime                        0.013607               0.003995   \n",
+      "                               quadprog                   highs  \\\n",
+      "solution_found                     True                    True   \n",
+      "objective                      9.471288                9.471288   \n",
+      "primal_residual                     0.0                     0.0   \n",
+      "dual_residual                       0.0                     0.0   \n",
+      "duality_gap      2.4549529076267618e-11  1.5403572417582723e-08   \n",
+      "runtime                          0.0137                0.014194   \n",
       "\n",
       "                                cvxopt                  qpalm  \\\n",
       "solution_found                    True                   True   \n",
-      "objective                     9.152325               9.151026   \n",
-      "primal_residual                    0.0               0.000043   \n",
+      "objective                     9.471289               9.470623   \n",
+      "primal_residual                    0.0               0.000027   \n",
       "dual_residual                      0.0                    0.0   \n",
-      "duality_gap      1.988092328781262e-07  0.0012989187257221638   \n",
-      "runtime                       0.056733               0.012029   \n",
+      "duality_gap      6.056290111633444e-07  0.0006646425373500464   \n",
+      "runtime                       0.186897               0.012921   \n",
       "\n",
-      "                               quadprog                 osqp  \n",
-      "solution_found                     True                 True  \n",
-      "objective                      9.152325             9.029323  \n",
-      "primal_residual                     0.0             0.001149  \n",
-      "dual_residual                       0.0             0.001865  \n",
-      "duality_gap      1.4164669437377597e-11  0.12033420001202089  \n",
-      "runtime                        0.010541             0.006516  \n"
+      "                                osqp                    daqp  \n",
+      "solution_found                  True                    True  \n",
+      "objective                   9.375492                9.471288  \n",
+      "primal_residual             0.001171                     0.0  \n",
+      "dual_residual               0.003611                     0.0  \n",
+      "duality_gap      0.09328704802409349  2.5834889783027393e-13  \n",
+      "runtime                     0.009464                0.004038  \n"
      ]
     }
    ],
@@ -357,9 +357,38 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Shape of E: (100, 100)\n",
+      "Shape of A: (1, 100)\n",
+      "Shape of b: (1,)\n",
+      "[ 0.50658507 -1.89669468  2.54325499 -2.81260592  0.42090006 -2.36880135\n",
+      " -1.70059944 -1.56137033 -0.45295373 -1.21109015 -0.18507463 -0.33415172\n",
+      "  0.34911333  0.2862648   0.27907706  0.59174764  1.11222381 -0.37063551\n",
+      " -1.24564906 -1.16199774 -1.36576132 -1.01923137  1.08762055 -1.36689425\n",
+      "  0.68182603  1.8132053  -1.24939887  0.44880047 -0.31721993  0.45788032\n",
+      " -2.16885082  0.08446289  0.03742658  5.07861746  0.54740781 -1.56658745\n",
+      " -1.25378726 -0.96971097 -1.70255824 -2.02491766  0.86454987  0.26554575\n",
+      " -0.49077351 -0.77776254  1.48515169  1.89438637  0.87526022  0.25394033\n",
+      " -1.00896149  1.70555306 -0.71750965  2.2276285  -0.42254413  1.10379759\n",
+      " -1.16146335 -0.25411908  3.76301596  0.77190189  0.77044523 -2.50004494\n",
+      " -1.53914058 -1.01236718  1.99537578  0.78373767  0.20173625  0.92652714\n",
+      "  0.45775583  0.90882105 -1.23563221 -0.30711881 -0.79632278  0.85039097\n",
+      "  2.27625057  0.09620437 -0.22659631  2.30520779  1.6144982   1.51617035\n",
+      "  0.46745997 -0.95195358 -0.93320806 -1.64150029 -0.00975186 -1.88583964\n",
+      " -0.4153646   2.21182001  0.81929061  0.57399228  1.30987463 -1.31431866\n",
+      " -1.30834432 -1.30032716  0.16104168  2.42783404  1.49705303 -2.2022133\n",
+      " -1.08950654 -0.41762888  2.29323291 -0.77500987]\n"
+     ]
+    }
+   ],
    "source": [
     "# Define class MinVariance\n",
+    "from helper_functions import to_numpy\n",
+    "\n",
     "class MinVariance(Optimization):\n",
     "\n",
     "    def __init__(self,\n",
@@ -373,27 +402,59 @@
     "        self.covariance = Covariance() if covariance is None else covariance\n",
     "\n",
     "    def set_objective(self, optimization_data: OptimizationData) -> None:\n",
-    "        #<your code here>\n",
-    "\n",
+    "        X = optimization_data['return_series']\n",
+    "        covmat = self.covariance.estimate(X=X, inplace=False)\n",
+    "        self.objective = Objective(\n",
+    "            P = covmat\n",
+    "        )\n",
+    "        return None\n",
+    "    \n",
     "    def solve(self) -> None:\n",
     "        if self.params.get('solver_name') == 'analytical':\n",
-    "            #<your code here>\n",
-    "            return None\n",
+    "            constraints = self.constraints\n",
+    "            GhAb = constraints.to_GhAb()\n",
+    "            obj_coeff = self.objective.coefficients\n",
+    "\n",
+    "            E = to_numpy(obj_coeff['P'])\n",
+    "            A = GhAb['A']\n",
+    "            b = GhAb['b']\n",
+    "            \n",
+    "            try:\n",
+    "                weights = np.linalg.inv(E) @ A.T @ np.linalg.inv(A @ np.linalg.inv(E) @ A.T) @ b\n",
+    "                self.results.update({\n",
+    "                    'weights': weights,\n",
+    "                    'status': True\n",
+    "                })        \n",
+    "                return None\n",
+    "            \n",
+    "            except ValueError as ve:\n",
+    "                print(\"ValueError:\", ve)\n",
+    "                return super().solve()\n",
+    "            except Exception as e:\n",
+    "                print(\"Exception:\", e)\n",
+    "                return super().solve()\n",
     "        else:\n",
     "            return super().solve()\n",
     "\n",
     "\n",
     "# Create a constraints object with just a budget constraint\n",
-    "#<your code here>\n",
+    "constraints = Constraints(ids = df.columns.tolist())\n",
+    "constraints.add_budget(rhs=[1], sense='=')\n",
     "\n",
     "# Instantiate the MinVariance class\n",
-    "#<your code here>\n",
+    "minvar = MinVariance(\n",
+    "    constraints=constraints,\n",
+    "    covariance=covariance,\n",
+    "    solver_name='analytical'\n",
+    ")\n",
     "\n",
     "# Prepare the optimization data and prepare the optimization problem\n",
-    "#<your code here>\n",
+    "optimization_data = OptimizationData(return_series=df)\n",
+    "minvar.set_objective(optimization_data=optimization_data)\n",
     "\n",
     "# Solve the optimization problem and print the weights\n",
-    "#<your code here>"
+    "minvar.solve()\n",
+    "print(minvar.results.get('weights'))"
    ]
   }
  ],
