--- a/assignments/assignment_1.ipynb
+++ b/assignments/assignment_1.ipynb
@@ -427,12 +427,14 @@
     "                })        \n",
     "                return None\n",
     "            \n",
-    "            except ValueError as ve:\n",
-    "                print(\"ValueError:\", ve)\n",
-    "                return super().solve()\n",
-    "            except Exception as e:\n",
-    "                print(\"Exception:\", e)\n",
-    "                return super().solve()\n",
+    "            except:\n",
+    "                weights = [0]*len(E)\n",
+    "                self.results.update({\n",
+    "                    'weights': weights,\n",
+    "                    'status': False\n",
+    "                })        \n",
+    "                return None\n",
+    "\n",
     "        else:\n",
     "            return super().solve()\n",
     "\n",
