--- a/assignments/assignment_1.ipynb
+++ b/assignments/assignment_1.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -63,71 +63,71 @@
      "output_type": "stream",
      "text": [
       "Vector of expected returns (q):\n",
-      "Asset_1      0.439781\n",
-      "Asset_2      0.003854\n",
-      "Asset_3      0.557548\n",
-      "Asset_4      0.783066\n",
-      "Asset_5      1.106094\n",
+      "Asset_1      0.685387\n",
+      "Asset_2      0.842107\n",
+      "Asset_3      0.424560\n",
+      "Asset_4      0.749159\n",
+      "Asset_5      0.347585\n",
       "               ...   \n",
-      "Asset_96     0.404006\n",
-      "Asset_97     0.965377\n",
-      "Asset_98     0.908774\n",
-      "Asset_99     0.893983\n",
-      "Asset_100    0.675554\n",
+      "Asset_96     0.981816\n",
+      "Asset_97     0.959098\n",
+      "Asset_98     0.250784\n",
+      "Asset_99     0.784766\n",
+      "Asset_100    0.349733\n",
       "Length: 100, dtype: float64\n",
       "\n",
       "Covariance matrix (P):\n",
       "             Asset_1    Asset_2    Asset_3    Asset_4    Asset_5    Asset_6  \\\n",
-      "Asset_1    39.935473  29.044137  28.259793  28.210666  31.966498  25.268396   \n",
-      "Asset_2    29.044137  37.301116  27.133329  27.146006  29.262580  26.448117   \n",
-      "Asset_3    28.259793  27.133329  31.835300  25.985145  29.862545  24.311638   \n",
-      "Asset_4    28.210666  27.146006  25.985145  34.438228  31.243505  22.975007   \n",
-      "Asset_5    31.966498  29.262580  29.862545  31.243505  40.212618  25.703519   \n",
+      "Asset_1    26.113495  21.374907  22.505923  19.590368  20.891640  20.406451   \n",
+      "Asset_2    21.374907  31.591600  26.193931  23.326526  22.056617  21.375757   \n",
+      "Asset_3    22.505923  26.193931  33.712525  25.545640  24.313666  24.345191   \n",
+      "Asset_4    19.590368  23.326526  25.545640  29.709464  20.726178  18.976139   \n",
+      "Asset_5    20.891640  22.056617  24.313666  20.726178  28.738330  20.418363   \n",
       "...              ...        ...        ...        ...        ...        ...   \n",
-      "Asset_96   24.296039  22.055025  22.256000  22.204950  25.772871  19.753052   \n",
-      "Asset_97   26.388233  26.401770  23.257242  23.904631  25.705142  24.335317   \n",
-      "Asset_98   29.526739  27.416981  23.482212  25.402053  29.320160  24.010047   \n",
-      "Asset_99   28.986762  26.723594  25.614827  25.817463  28.661038  24.496429   \n",
-      "Asset_100  30.959394  30.742893  26.588187  27.679404  30.117096  26.322499   \n",
+      "Asset_96   22.135860  21.355930  26.168746  21.463474  23.713311  22.115297   \n",
+      "Asset_97   21.726616  22.295494  22.721469  19.622566  20.593848  21.940776   \n",
+      "Asset_98   23.985094  26.439406  28.224018  24.695844  23.319461  25.779855   \n",
+      "Asset_99   22.950286  24.294787  27.315581  22.999226  24.623402  22.951599   \n",
+      "Asset_100  18.253613  21.427663  24.532112  21.837443  19.958575  20.060446   \n",
       "\n",
       "             Asset_7    Asset_8    Asset_9   Asset_10  ...   Asset_91  \\\n",
-      "Asset_1    25.343879  24.265920  28.589174  30.345614  ...  26.575289   \n",
-      "Asset_2    26.456163  21.813849  27.333822  26.985804  ...  26.044412   \n",
-      "Asset_3    24.108731  19.737716  24.886522  26.309967  ...  23.053284   \n",
-      "Asset_4    24.563449  20.530373  24.773539  26.012921  ...  23.160255   \n",
-      "Asset_5    29.642819  22.200274  29.455153  29.773534  ...  24.987205   \n",
+      "Asset_1    24.462559  19.482683  23.491478  20.349498  ...  18.779039   \n",
+      "Asset_2    26.940167  21.771300  26.038758  24.151279  ...  20.748926   \n",
+      "Asset_3    27.778291  22.536712  27.577718  24.424882  ...  22.949826   \n",
+      "Asset_4    25.028290  21.191143  26.602573  23.981678  ...  20.726935   \n",
+      "Asset_5    24.715820  19.830419  23.289732  21.574625  ...  21.379389   \n",
       "...              ...        ...        ...        ...  ...        ...   \n",
-      "Asset_96   21.564160  18.511085  20.278361  22.387327  ...  20.068639   \n",
-      "Asset_97   25.137563  21.570679  24.809777  23.615161  ...  23.470303   \n",
-      "Asset_98   24.283639  20.063021  27.594431  23.957988  ...  24.660083   \n",
-      "Asset_99   25.314906  19.371751  24.541004  25.470704  ...  23.742908   \n",
-      "Asset_100  27.141232  22.477538  27.726224  28.147073  ...  26.350620   \n",
+      "Asset_96   27.482488  21.344255  25.839809  22.463117  ...  21.427069   \n",
+      "Asset_97   26.396695  20.239891  24.172619  20.812057  ...  19.950496   \n",
+      "Asset_98   28.359516  22.951053  27.714678  25.636685  ...  22.039056   \n",
+      "Asset_99   27.542139  21.780468  25.680999  23.363758  ...  22.569857   \n",
+      "Asset_100  22.651323  19.367939  23.854386  21.714558  ...  19.953524   \n",
       "\n",
       "            Asset_92   Asset_93   Asset_94   Asset_95   Asset_96   Asset_97  \\\n",
-      "Asset_1    29.375226  28.664518  25.068567  28.141642  24.296039  26.388233   \n",
-      "Asset_2    26.288526  27.539961  25.501741  27.843657  22.055025  26.401770   \n",
-      "Asset_3    27.237331  24.870176  22.114376  27.117591  22.256000  23.257242   \n",
-      "Asset_4    27.178164  25.794175  23.947608  26.975926  22.204950  23.904631   \n",
-      "Asset_5    30.485020  28.705223  25.614512  30.192633  25.772871  25.705142   \n",
+      "Asset_1    19.432463  24.412242  21.908555  21.250079  22.135860  21.726616   \n",
+      "Asset_2    22.988641  24.753120  24.586565  22.266648  21.355930  22.295494   \n",
+      "Asset_3    23.399550  27.207434  25.291687  23.888829  26.168746  22.721469   \n",
+      "Asset_4    20.565916  25.945901  23.212778  20.766448  21.463474  19.622566   \n",
+      "Asset_5    20.170166  23.068775  24.023650  22.910271  23.713311  20.593848   \n",
       "...              ...        ...        ...        ...        ...        ...   \n",
-      "Asset_96   21.582004  21.521797  19.093679  23.180837  26.408043  20.931214   \n",
-      "Asset_97   24.035253  23.441473  24.360816  24.602940  20.931214  32.725450   \n",
-      "Asset_98   26.389459  24.455979  23.101276  25.896920  19.964862  24.129065   \n",
-      "Asset_99   24.925356  25.883899  22.893210  26.222056  22.423260  24.775623   \n",
-      "Asset_100  27.720055  29.397430  27.312517  28.585832  23.396357  26.758970   \n",
+      "Asset_96   23.221288  25.057041  25.399291  22.809582  31.848868  22.328831   \n",
+      "Asset_97   20.466398  24.841104  22.897522  22.215585  22.328831  30.135667   \n",
+      "Asset_98   23.291759  27.407575  25.546955  23.898978  24.479200  25.790391   \n",
+      "Asset_99   22.473075  25.709692  25.689982  24.049631  25.260528  22.483152   \n",
+      "Asset_100  20.076317  22.985365  23.213523  20.668170  21.219909  18.965503   \n",
       "\n",
       "            Asset_98   Asset_99  Asset_100  \n",
-      "Asset_1    29.526739  28.986762  30.959394  \n",
-      "Asset_2    27.416981  26.723594  30.742893  \n",
-      "Asset_3    23.482212  25.614827  26.588187  \n",
-      "Asset_4    25.402053  25.817463  27.679404  \n",
-      "Asset_5    29.320160  28.661038  30.117096  \n",
+      "Asset_1    23.985094  22.950286  18.253613  \n",
+      "Asset_2    26.439406  24.294787  21.427663  \n",
+      "Asset_3    28.224018  27.315581  24.532112  \n",
+      "Asset_4    24.695844  22.999226  21.837443  \n",
+      "Asset_5    23.319461  24.623402  19.958575  \n",
       "...              ...        ...        ...  \n",
-      "Asset_96   19.964862  22.423260  23.396357  \n",
-      "Asset_97   24.129065  24.775623  26.758970  \n",
-      "Asset_98   34.401505  24.860313  28.780541  \n",
-      "Asset_99   24.860313  32.741131  27.008538  \n",
-      "Asset_100  28.780541  27.008538  38.429146  \n",
+      "Asset_96   24.479200  25.260528  21.219909  \n",
+      "Asset_97   25.790391  22.483152  18.965503  \n",
+      "Asset_98   36.230329  26.864877  23.594938  \n",
+      "Asset_99   26.864877  34.176160  23.310134  \n",
+      "Asset_100  23.594938  23.310134  27.390342  \n",
       "\n",
       "[100 rows x 100 columns]\n"
      ]
@@ -186,7 +186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -231,16 +231,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['quadprog', 'highs', 'cvxopt', 'qpalm', 'osqp', 'daqp']"
+       "['highs', 'osqp', 'qpalm', 'daqp', 'cvxopt', 'quadprog']"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -251,7 +251,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -300,36 +300,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "                               quadprog                   highs  \\\n",
-      "solution_found                     True                    True   \n",
-      "objective                      9.471288                9.471288   \n",
-      "primal_residual                     0.0                     0.0   \n",
-      "dual_residual                       0.0                     0.0   \n",
-      "duality_gap      2.4549529076267618e-11  1.5403572417582723e-08   \n",
-      "runtime                          0.0137                0.014194   \n",
+      "                                  highs                 osqp  \\\n",
+      "solution_found                     True                 True   \n",
+      "objective                      9.642079             9.577749   \n",
+      "primal_residual                     0.0              0.00082   \n",
+      "dual_residual                       0.0             0.001854   \n",
+      "duality_gap      1.0181608445236634e-08  0.06325655098640226   \n",
+      "runtime                        0.017535             0.016056   \n",
       "\n",
-      "                                cvxopt                  qpalm  \\\n",
-      "solution_found                    True                   True   \n",
-      "objective                     9.471289               9.470623   \n",
-      "primal_residual                    0.0               0.000027   \n",
-      "dual_residual                      0.0                    0.0   \n",
-      "duality_gap      6.056290111633444e-07  0.0006646425373500464   \n",
-      "runtime                       0.186897               0.012921   \n",
+      "                                 qpalm                    daqp  \\\n",
+      "solution_found                    True                    True   \n",
+      "objective                     9.641409                9.642079   \n",
+      "primal_residual               0.000022                     0.0   \n",
+      "dual_residual                      0.0                     0.0   \n",
+      "duality_gap      0.0006693867048959135  1.0693668173189508e-12   \n",
+      "runtime                       0.021678                0.008437   \n",
       "\n",
-      "                                osqp                    daqp  \n",
-      "solution_found                  True                    True  \n",
-      "objective                   9.375492                9.471288  \n",
-      "primal_residual             0.001171                     0.0  \n",
-      "dual_residual               0.003611                     0.0  \n",
-      "duality_gap      0.09328704802409349  2.5834889783027393e-13  \n",
-      "runtime                     0.009464                0.004038  \n"
+      "                                 cvxopt               quadprog  \n",
+      "solution_found                     True                   True  \n",
+      "objective                      9.642079               9.642079  \n",
+      "primal_residual                     0.0                    0.0  \n",
+      "dual_residual                       0.0                    0.0  \n",
+      "duality_gap      1.9195134596417115e-06  8.252953875853564e-12  \n",
+      "runtime                        0.081402               0.014579  \n"
      ]
     }
    ],
@@ -355,33 +355,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Shape of E: (100, 100)\n",
-      "Shape of A: (1, 100)\n",
-      "Shape of b: (1,)\n",
-      "[ 0.50658507 -1.89669468  2.54325499 -2.81260592  0.42090006 -2.36880135\n",
-      " -1.70059944 -1.56137033 -0.45295373 -1.21109015 -0.18507463 -0.33415172\n",
-      "  0.34911333  0.2862648   0.27907706  0.59174764  1.11222381 -0.37063551\n",
-      " -1.24564906 -1.16199774 -1.36576132 -1.01923137  1.08762055 -1.36689425\n",
-      "  0.68182603  1.8132053  -1.24939887  0.44880047 -0.31721993  0.45788032\n",
-      " -2.16885082  0.08446289  0.03742658  5.07861746  0.54740781 -1.56658745\n",
-      " -1.25378726 -0.96971097 -1.70255824 -2.02491766  0.86454987  0.26554575\n",
-      " -0.49077351 -0.77776254  1.48515169  1.89438637  0.87526022  0.25394033\n",
-      " -1.00896149  1.70555306 -0.71750965  2.2276285  -0.42254413  1.10379759\n",
-      " -1.16146335 -0.25411908  3.76301596  0.77190189  0.77044523 -2.50004494\n",
-      " -1.53914058 -1.01236718  1.99537578  0.78373767  0.20173625  0.92652714\n",
-      "  0.45775583  0.90882105 -1.23563221 -0.30711881 -0.79632278  0.85039097\n",
-      "  2.27625057  0.09620437 -0.22659631  2.30520779  1.6144982   1.51617035\n",
-      "  0.46745997 -0.95195358 -0.93320806 -1.64150029 -0.00975186 -1.88583964\n",
-      " -0.4153646   2.21182001  0.81929061  0.57399228  1.30987463 -1.31431866\n",
-      " -1.30834432 -1.30032716  0.16104168  2.42783404  1.49705303 -2.2022133\n",
-      " -1.08950654 -0.41762888  2.29323291 -0.77500987]\n"
+      "[-8.45886652e-01 -1.73032690e+00 -3.47340153e+00 -6.94895232e-02\n",
+      " -1.33752904e-01 -5.49375570e-02  9.77318517e+00  7.54549416e+00\n",
+      "  3.99504795e+00  1.75812973e+00 -1.20461434e+00  1.19154199e+00\n",
+      " -2.82004094e+00 -5.46782990e+00  2.30799022e+00  6.07342208e+00\n",
+      "  4.76325639e+00 -5.31270991e+00 -1.06054788e+01  2.70024264e+00\n",
+      "  2.38552401e+00 -4.11283225e+00 -4.63540911e+00  4.19886029e+00\n",
+      "  1.42663025e+00 -1.06687391e+01 -3.30588249e-01 -1.34605444e-01\n",
+      " -8.51462311e+00  4.12197669e+00  8.66655015e-01  3.07176643e+00\n",
+      " -3.45045226e+00  2.86965417e-01  1.16907979e+00 -9.22743036e+00\n",
+      " -9.38574153e+00 -3.47137035e+00  1.11814452e+01 -4.31901261e-01\n",
+      " -3.51980386e+00  4.51863903e+00  1.55929217e+00 -8.00083253e+00\n",
+      " -5.02228021e-01 -3.82416838e+00  1.12312147e-02  4.89504687e+00\n",
+      "  1.07052774e+00 -2.35433421e+00  8.59845666e+00 -3.05807155e+00\n",
+      "  3.44718972e+00  5.33158775e+00  2.17388363e+00  9.99351971e+00\n",
+      " -9.83726290e+00 -1.70236773e+00 -3.49118447e+00  8.96210204e-01\n",
+      " -1.97114282e+00 -4.98523789e+00 -1.06699652e+00  6.04372905e+00\n",
+      "  5.45349268e-01 -2.65508463e-02  4.01197152e+00 -1.14481696e+01\n",
+      "  6.78419888e-01 -4.09255225e+00 -3.00213721e+00 -4.09583387e+00\n",
+      "  2.34904558e+00  2.09026376e+00 -4.27855036e+00  9.59741555e+00\n",
+      "  5.95463940e+00  8.98002962e-01  8.28967286e+00 -4.25421879e-01\n",
+      "  3.89977373e+00 -5.53239708e+00 -5.22747264e+00 -3.00565296e+00\n",
+      "  4.10183491e+00  2.95413344e+00  5.46815846e+00  6.60154553e+00\n",
+      "  6.52168256e+00 -9.08727405e+00 -1.48290397e+00 -4.03602721e-01\n",
+      " -2.63741814e+00  8.76188620e-01  2.04758693e+00  6.20919496e+00\n",
+      " -7.44148365e+00  1.03971274e+01 -7.45189383e+00  1.86573468e-01]\n"
      ]
     }
    ],
