Nills edits in ipynb

--- a/assignments/Trading_Strat.ipynb
+++ b/assignments/Trading_Strat.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 39,
    "id": "29bbc65c",
    "metadata": {},
    "outputs": [],
@@ -14,7 +14,6 @@
     "# Third party imports\n",
     "import numpy as np\n",
     "import pandas as pd\n",
-    "import matplotlib.pyplot as plt\n",
     "\n",
     "# Add the project root directory to Python path\n",
     "os.chdir('..')\n",
@@ -26,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 47,
    "id": "62a7eae0",
    "metadata": {},
    "outputs": [],
@@ -36,14 +35,10 @@
     "    load_data_spi,\n",
     "    load_pickle,\n",
     ")\n",
-    "\n",
     "from estimation.covariance import Covariance, CovarianceSpecification\n",
     "\n",
     "from estimation.expected_return import ExpectedReturn\n",
-    "from estimation.black_litterman import (\n",
-    "    bl_posterior_mean,                            \n",
-    "    generate_views_from_scores,                    \n",
-    ")\n",
+    "\n",
     "from optimization.optimization import (\n",
     "    BlackLitterman, ScoreVariance, MeanVariance , MaxSharpe, BlackLittermanMS                            \n",
     ")\n",
@@ -56,10 +51,8 @@
     "    bibfn_selection_min_volume,\n",
     "    bibfn_selection_gaps,\n",
     "    bibfn_selection_ltr,\n",
-    "    bibfn_filter_jkp_factor_scores,\n",
     "    # Optimization item builder functions\n",
     "    bibfn_return_series,\n",
-    "    bibfn_cap_weights,                              \n",
     "    bibfn_scores_ltr,\n",
     "    bibfn_equal_weights,\n",
     "    # Constraints item builder functions\n",
@@ -75,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 48,
    "id": "22bbd6fe",
    "metadata": {},
    "outputs": [],
@@ -89,23 +82,20 @@
     "\n",
     "path_to_data = \"C:/Users/angus/OneDrive/Desktop/QPMwP/Investment_Strategy/data/\"\n",
     "\n",
-    "\n",
     "# Load market and jkp data from parquet files\n",
     "market_data = pd.read_parquet(path = f'{path_to_data}market_data.parquet')\n",
     "jkp_data = pd.read_parquet(path = f'{path_to_data}jkp_data.parquet')\n",
     "\n",
-    "# Instantiate the BacktestData class\n",
-    "# and set the market data and jkp data as attributes\n",
+    "# Instantiate the BacktestData class and set the market data and jkp data as attributes\n",
     "data = BacktestData()\n",
     "data.market_data = market_data\n",
     "data.jkp_data = jkp_data\n",
-    "data.bm_series = load_data_spi(path=\"C:/Users/angus/OneDrive/Desktop/QPMwP/Investment_Strategy/data/\"\n",
-    ")"
+    "data.bm_series = load_data_spi(path=path_to_data)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 42,
    "id": "5b01fb1c",
    "metadata": {},
    "outputs": [],
@@ -133,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 43,
    "id": "c70dd9f5",
    "metadata": {},
    "outputs": [],
@@ -152,8 +142,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "604140ad",
+   "metadata": {},
+   "source": [
+    "Changed rebalance dates to every 3 months instead of every month"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 44,
    "id": "ee1f5e8b",
    "metadata": {},
    "outputs": [
@@ -210,15 +208,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 45,
    "id": "443e3a4f",
    "metadata": {},
    "outputs": [],
    "source": [
     "# --------------------------------------------------------------------------\n",
-    "# Defining new item builder functions\n",
+    "# Prepare backtest service\n",
     "# --------------------------------------------------------------------------\n",
     "\n",
+    "# Define the selection item builders.\n",
     "selection_item_builders = {\n",
     "    'gaps': SelectionItemBuilder(\n",
     "        bibfn = bibfn_selection_gaps,\n",
@@ -300,11 +299,12 @@
     "        default_limit = 0.15\n",
     "        )\n",
     "\n",
-    "}\n",
+    "    }\n",
     "\n",
     "risk_aversion = 100\n",
     "turnover_penalty = 0.01\n",
-    "cov_spec = Covariance(CovarianceSpecification(method='ewma_ledoit', span=252*3))\n",
+    "cov_spec = Covariance(CovarianceSpecification(method='ewma_ledoit_mix', span1=126, span2=3*256,\n",
+    "                                               short_weight=0.3, long_weight=0.7 , clip = [-0.05, 0.05]))\n",
     "solver_name='cvxopt'\n",
     "\n",
     "opt1 = BlackLitterman(\n",
@@ -316,7 +316,8 @@
     "        #view_method='quintile',\n",
     "        view_method='absolute',\n",
     "        fields=['scores'],\n",
-    "        turnover_penalty = turnover_penalty)\n",
+    "        turnover_penalty = turnover_penalty\n",
+    "    )\n",
     "\n",
     "opt2 = ScoreVariance(\n",
     "        field = 'scores',\n",
@@ -340,7 +341,7 @@
     "        risk_aversion = risk_aversion,\n",
     "        solver_name=solver_name,\n",
     "        turnover_penalty = turnover_penalty\n",
-    ")\n",
+    "    )\n",
     "\n",
     "opt5 = BlackLittermanMS(\n",
     "        solver_name=solver_name,\n",
@@ -351,7 +352,8 @@
     "        #view_method='quintile',\n",
     "        view_method='absolute',\n",
     "        fields=['scores'],\n",
-    "        turnover_penalty = turnover_penalty)\n",
+    "        turnover_penalty = turnover_penalty\n",
+    "    )\n",
     "\n",
     "# Initialize the backtest service\n",
     "bs = BacktestService(\n",
@@ -360,12 +362,28 @@
     "    selection_item_builders = selection_item_builders,\n",
     "    optimization_item_builders = optimization_item_builders,\n",
     "    rebdates = rebdates,\n",
-    ")"
+    "    )"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5d7c463f",
+   "metadata": {},
+   "source": [
+    "Added in size_dep_upper_bounds and sector_exposure_constraints, increased budget constraint to 1.2 with sense <=, and changed box constraints to lower = 0 and upper = 0.1. (EXPLAIN WHY)."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "96693dfc",
+   "metadata": {},
+   "source": [
+    "Also then tested 5 different optimisation techniques and found Mean Variance to work the best. (Expand on this a lot, maybe showing plots to compare how the 5 methods performed)."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 46,
    "id": "aa0b5804",
    "metadata": {},
    "outputs": [
@@ -374,79 +392,25 @@
      "output_type": "stream",
      "text": [
       "Rebalancing date: 2015-01-01\n",
-      "Covariance estimation method: ewma_ledoit\n",
-      "Rebalancing date: 2015-04-01\n",
-      "Covariance estimation method: ewma_ledoit\n",
-      "Rebalancing date: 2015-07-01\n",
-      "Covariance estimation method: ewma_ledoit\n",
-      "Rebalancing date: 2015-10-01\n",
-      "Covariance estimation method: ewma_ledoit\n",
-      "Rebalancing date: 2016-01-01\n",
-      "Covariance estimation method: ewma_ledoit\n",
-      "Rebalancing date: 2016-04-01\n",
-      "Covariance estimation method: ewma_ledoit\n",
-      "Rebalancing date: 2016-07-01\n",
-      "Covariance estimation method: ewma_ledoit\n",
-      "Rebalancing date: 2016-10-03\n",
-      "Covariance estimation method: ewma_ledoit\n",
-      "Rebalancing date: 2017-01-02\n",
-      "Covariance estimation method: ewma_ledoit\n",
-      "Rebalancing date: 2017-04-03\n",
-      "Covariance estimation method: ewma_ledoit\n",
-      "Rebalancing date: 2017-07-03\n",
-      "Covariance estimation method: ewma_ledoit\n",
-      "Rebalancing date: 2017-10-02\n",
-      "Covariance estimation method: ewma_ledoit\n",
-      "Rebalancing date: 2018-01-01\n",
-      "Covariance estimation method: ewma_ledoit\n",
-      "Rebalancing date: 2018-04-02\n",
-      "Covariance estimation method: ewma_ledoit\n",
-      "Rebalancing date: 2018-07-02\n",
-      "Covariance estimation method: ewma_ledoit\n",
-      "Rebalancing date: 2018-10-01\n",
-      "Covariance estimation method: ewma_ledoit\n",
-      "Rebalancing date: 2019-01-01\n",
-      "Covariance estimation method: ewma_ledoit\n",
-      "Rebalancing date: 2019-04-01\n",
-      "Covariance estimation method: ewma_ledoit\n",
-      "Rebalancing date: 2019-07-01\n",
-      "Covariance estimation method: ewma_ledoit\n",
-      "Rebalancing date: 2019-10-01\n",
-      "Covariance estimation method: ewma_ledoit\n",
-      "Rebalancing date: 2020-01-01\n",
-      "Covariance estimation method: ewma_ledoit\n",
-      "Rebalancing date: 2020-04-01\n",
-      "Covariance estimation method: ewma_ledoit\n",
-      "Rebalancing date: 2020-07-01\n",
-      "Covariance estimation method: ewma_ledoit\n",
-      "Rebalancing date: 2020-10-01\n",
-      "Covariance estimation method: ewma_ledoit\n",
-      "Rebalancing date: 2021-01-01\n",
-      "Covariance estimation method: ewma_ledoit\n",
-      "Rebalancing date: 2021-04-01\n",
-      "Covariance estimation method: ewma_ledoit\n",
-      "Rebalancing date: 2021-07-01\n",
-      "Covariance estimation method: ewma_ledoit\n",
-      "Rebalancing date: 2021-10-01\n",
-      "Covariance estimation method: ewma_ledoit\n",
-      "Rebalancing date: 2022-01-03\n",
-      "Covariance estimation method: ewma_ledoit\n",
-      "Rebalancing date: 2022-04-01\n",
-      "Covariance estimation method: ewma_ledoit\n",
-      "Rebalancing date: 2022-07-01\n",
-      "Covariance estimation method: ewma_ledoit\n",
-      "Rebalancing date: 2022-10-03\n",
-      "Covariance estimation method: ewma_ledoit\n",
-      "Rebalancing date: 2023-01-02\n",
-      "Covariance estimation method: ewma_ledoit\n",
-      "Rebalancing date: 2023-04-03\n",
-      "Covariance estimation method: ewma_ledoit\n",
-      "Rebalancing date: 2023-07-03\n",
-      "Covariance estimation method: ewma_ledoit\n",
-      "Rebalancing date: 2023-10-02\n",
-      "Covariance estimation method: ewma_ledoit\n",
-      "Rebalancing date: 2024-01-01\n",
-      "Covariance estimation method: ewma_ledoit\n"
+      "Covariance estimation method: ewma_ledoit_mix\n"
+     ]
+    },
+    {
+     "ename": "RuntimeError",
+     "evalue": "Estimation method not recognized.",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "File \u001b[1;32mc:\\Users\\angus\\OneDrive\\Desktop\\QPMwP\\Investment_Strategy//src\\backtesting\\backtest.py:72\u001b[0m, in \u001b[0;36mBacktest.run\u001b[1;34m(self, bs)\u001b[0m\n\u001b[0;32m     71\u001b[0m \u001b[38;5;28;01mtry\u001b[39;00m:\n\u001b[1;32m---> 72\u001b[0m     \u001b[43mbs\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43moptimization\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mset_objective\u001b[49m\u001b[43m(\u001b[49m\u001b[43moptimization_data\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mbs\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43moptimization_data\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m     73\u001b[0m     bs\u001b[38;5;241m.\u001b[39moptimization\u001b[38;5;241m.\u001b[39msolve()\n",
+      "File \u001b[1;32mc:\\Users\\angus\\OneDrive\\Desktop\\QPMwP\\Investment_Strategy//src\\optimization\\optimization.py:400\u001b[0m, in \u001b[0;36mMeanVariance.set_objective\u001b[1;34m(self, optimization_data)\u001b[0m\n\u001b[0;32m    399\u001b[0m X \u001b[38;5;241m=\u001b[39m optimization_data[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mreturn_series\u001b[39m\u001b[38;5;124m'\u001b[39m]\n\u001b[1;32m--> 400\u001b[0m covmat \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mcovariance\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mestimate\u001b[49m\u001b[43m(\u001b[49m\u001b[43mX\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mX\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43minplace\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;28;43;01mFalse\u001b[39;49;00m\u001b[43m)\u001b[49m\n\u001b[0;32m    401\u001b[0m mu \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mexpected_return\u001b[38;5;241m.\u001b[39mestimate(X\u001b[38;5;241m=\u001b[39mX, inplace\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mFalse\u001b[39;00m)\n",
+      "File \u001b[1;32mc:\\Users\\angus\\OneDrive\\Desktop\\QPMwP\\Investment_Strategy//src\\estimation\\covariance.py:131\u001b[0m, in \u001b[0;36mCovariance.estimate\u001b[1;34m(self, X, inplace)\u001b[0m\n\u001b[0;32m    129\u001b[0m     cov_matrix \u001b[38;5;241m=\u001b[39m cov_mcd(X\u001b[38;5;241m=\u001b[39mX)\n\u001b[1;32m--> 131\u001b[0m \u001b[38;5;28;01melif\u001b[39;00m estimation_method \u001b[38;5;241m==\u001b[39m \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mewma_ledoit\u001b[39m\u001b[38;5;124m'\u001b[39m:\n\u001b[0;32m    132\u001b[0m     cov_matrix \u001b[38;5;241m=\u001b[39m cov_ewma_ledoit(X\u001b[38;5;241m=\u001b[39mX, span\u001b[38;5;241m=\u001b[39mspan)\n",
+      "\u001b[1;31mValueError\u001b[0m: Estimation method not recognized.",
+      "\nDuring handling of the above exception, another exception occurred:\n",
+      "\u001b[1;31mRuntimeError\u001b[0m                              Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[46], line 6\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;66;03m# --------------------------------------------------------------------------\u001b[39;00m\n\u001b[0;32m      2\u001b[0m \u001b[38;5;66;03m# Run backtests\u001b[39;00m\n\u001b[0;32m      3\u001b[0m \u001b[38;5;66;03m# --------------------------------------------------------------------------\u001b[39;00m\n\u001b[0;32m      5\u001b[0m bt_bl_ltr \u001b[38;5;241m=\u001b[39m Backtest()\n\u001b[1;32m----> 6\u001b[0m \u001b[43mbt_bl_ltr\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mrun\u001b[49m\u001b[43m(\u001b[49m\u001b[43mbs\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mbs\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m      8\u001b[0m path \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mC:/Users/angus/OneDrive/Desktop/QPMwP/Investment_Strategy/BACKTESTS/\u001b[39m\u001b[38;5;124m\"\u001b[39m  \u001b[38;5;66;03m# <change this to your path where you want to store the backtest>\u001b[39;00m\n\u001b[0;32m      9\u001b[0m filename \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mbacktest_bl_ltr.pickle\u001b[39m\u001b[38;5;124m'\u001b[39m \u001b[38;5;66;03m# <change this to your desired filename>\u001b[39;00m\n",
+      "File \u001b[1;32mc:\\Users\\angus\\OneDrive\\Desktop\\QPMwP\\Investment_Strategy//src\\backtesting\\backtest.py:75\u001b[0m, in \u001b[0;36mBacktest.run\u001b[1;34m(self, bs)\u001b[0m\n\u001b[0;32m     73\u001b[0m     bs\u001b[38;5;241m.\u001b[39moptimization\u001b[38;5;241m.\u001b[39msolve()\n\u001b[0;32m     74\u001b[0m \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;167;01mException\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m error:\n\u001b[1;32m---> 75\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mRuntimeError\u001b[39;00m(error)\n\u001b[0;32m     77\u001b[0m \u001b[38;5;66;03m# Extract the portfolio weights from the optimization results,\u001b[39;00m\n\u001b[0;32m     78\u001b[0m \u001b[38;5;66;03m# create a Portfolio object and append it to the strategy\u001b[39;00m\n\u001b[0;32m     79\u001b[0m weights \u001b[38;5;241m=\u001b[39m bs\u001b[38;5;241m.\u001b[39moptimization\u001b[38;5;241m.\u001b[39mresults[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mweights\u001b[39m\u001b[38;5;124m'\u001b[39m]\n",
+      "\u001b[1;31mRuntimeError\u001b[0m: Estimation method not recognized."
      ]
     }
    ],
@@ -463,8 +427,8 @@
     "\n",
     "# # Save the backtest as a .pickle file\n",
     "bt_bl_ltr.save(\n",
-    "     path = path,  # <change this to your path where you want to store the backtest>\n",
-    "     filename = filename # <change this to your desired filename>\n",
+    "     path = path, \n",
+    "     filename = filename \n",
     ")"
    ]
   },
@@ -656,7 +620,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": null,
    "id": "1740dbe7",
    "metadata": {},
    "outputs": [
@@ -815,6 +779,7 @@
     "    # annualized active return / annualized tracking error\n",
     "    return (active.mean() * 252) / (active.std() * np.sqrt(252))\n",
     "\n",
+    "\n",
     "def capture_ratios(r_p: pd.Series, r_b: pd.Series) -> tuple[float,float]:\n",
     "    \"\"\"\n",
     "    Calculate upside and downside capture of portfolio returns r_p vs. benchmark r_b.\n",
@@ -832,6 +797,13 @@
     "    down_cap = avg_p_down / avg_b_down if avg_b_down else np.nan\n",
     "    return up_cap, down_cap\n",
     "\n",
+    "# Helper function for hit ratio\n",
+    "def hit_ratio(series, benchmark):\n",
+    "    \"\"\"\n",
+    "    Calculate the hit ratio: percentage of periods where the strategy outperforms the benchmark.\n",
+    "    \"\"\"\n",
+    "    return (series > benchmark).mean()\n",
+    "\n",
     "# Compute individual performance metrics for each simulated strategy\n",
     "annual_return_dict        = {}\n",
     "cumulative_returns_dict   = {}\n",
@@ -841,6 +813,7 @@
     "tracking_error_dict       = {}\n",
     "downside_te_dict          = {}\n",
     "information_ratio_dict    = {}\n",
+    "hit_ratio_dict            = {}  # New dictionary for hit ratio\n",
     "up_capture_dict           = {}\n",
     "down_capture_dict         = {}\n",
     "\n",
@@ -855,6 +828,7 @@
     "    tracking_error_dict[column]     = tracking_error(sim[column], sim['bm'])\n",
     "    downside_te_dict[column]        = downside_tracking_error(sim[column], sim['bm'])\n",
     "    information_ratio_dict[column]  = information_ratio(sim[column], sim['bm'])\n",
+    "    hit_ratio_dict[column]          = hit_ratio(sim[column], sim['bm'])  # Calculate hit ratio\n",
     "    \n",
     "    # up/down capture (skip benchmark itself)\n",
     "    if column != 'bm':\n",
@@ -871,6 +845,7 @@
     "tracking_error     = pd.DataFrame(tracking_error_dict,     index=['Tracking Error'])\n",
     "downside_te        = pd.DataFrame(downside_te_dict,        index=['Downside Tracking Error'])\n",
     "info_ratio         = pd.DataFrame(information_ratio_dict,  index=['Information Ratio'])\n",
+    "hit_ratio_df       = pd.DataFrame(hit_ratio_dict,          index=['Hit Ratio'])  # New DataFrame for hit ratio\n",
     "up_capture         = pd.DataFrame(up_capture_dict,         index=['Upside Capture'])\n",
     "down_capture       = pd.DataFrame(down_capture_dict,       index=['Downside Capture'])\n",
     "\n",
@@ -884,6 +859,7 @@
     "    tracking_error,\n",
     "    downside_te,\n",
     "    info_ratio,\n",
+    "    hit_ratio_df,  # Add hit ratio here\n",
     "    up_capture,\n",
     "    down_capture\n",
     "])\n",
